	if r.status_code == 200:
	    data = r.json()
	df = pd.io.json.json_normalize(data)

*getdata.py
To do:
- Create a dataframe on hero winrate
- Try to customer data through patch
- Try to create a data visualization

General issues:
- Try to create data models to further investigate the games
- Try to learn data visualization in order to have a portfolio
- Problems with accessing dataframes and how to get access to disconnected data

====================
Heuristics on what dataviz library to choose
- Matplotlib is for basic plotting -- bars, pies, lines, scatter plots, etc.

- Seaborn is for statistical visualization -- use it if you're creating heatmaps or somehow summarizing your data and still want to show the distribution of your data
=> *** suitable for DaDota ***

- Bokeh is for interactive visualization -- if your data is so complex (or you haven't yet found the "message" in your data), then use Bokeh to create interactive visualizations that will allow your viewers to explore the data themselves

18/04
*getdata.py
- Customizing pro matches data, trying out seaborn
- Able to calculate match duration mean by seconds (done)

Issues:
- the API only fetches the nearest 100 matches, I have to do otherwise to see further than that
- pro matches don't return lineups

19/04
Explore ways to get more than 100 Dota matches
https://www.opendota.com/explorer?sql=SELECT%0Amatches.match_id%0AFROM%20matches%0AORDER%20BY%20match_id%20DESC%0AOFFSET%20200%0ALIMIT%20200&format=
Can we make a list/json file so that we will fetch match data by ID?

24/04
Kiev major
Goal:Creating models and portfolio after the major
Models
- Midas/item stats
- Push timing
- Kill distrib in games

26/04
Try to parse matches, seems like the variables are not like I expected

Plan:
a/ Match specific (done)
b/ Across matches
c/ Across players
d/ Across teams
e/ Acroos leagues

27/04
Finished first blood, tower damage model
Trying fetch multiple match data through fetching a list of match ID